2010-05-27 Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/tactical.php: Give some colour to the data shown.

	* godmode/menu.php: Updated year.	

2010-05-26 Miguel de Dios  <miguel.dedios@artica.es>

	* include/help/es/help_gis_map_builder.php,
	general/license/pandora_info_pt_br.html: fixed close open tags, the eclipse
	searched this bugs and advised me.

2010-05-26 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/menu.php: added hook for the submenu enterprise in the reporting.

2010-05-26  Junichi Satoh  <junichi@rworks.jp>

	* include/gettext.php: Changed the function to use. ereg() is
	deprecated by php 5.3.

2010-05-25 Raúl Mateos <raulofpandora@gmail.com>

	* godmode/agentes/module_manager.php, modificar_agente.php: Added some
	nice icons to buttons.

2010-05-25 Raúl Mateos <raulofpandora@gmail.com>

	* operation/menu.php, operation/snmpconsole/snmp_view: Updated year.
	Clean Code.

	* godmode/agentes/agent_conf_gis.php: Improved usability.

2010-05-25 Raúl Mateos <raulofpandora@gmail.com>

	* extensions/update_manager/lib/*.php: Updated year, clean code.

	* extensions/update_manager/lib/libupdate_manager.php: Improved usability.

2010-05-24  Sancho Lerena <slerena@gmail.com>

	* group_view.php: Much nicer view of group view. Added
	column for group icon and for force network modules icon.

2010-05-24 Raúl Mateos <raulofpandora@gmail.com>

	* include/config_process.php: Updated build to new RC2.

	* operation/agentes/sla_view.php, operation/agentes/ver_agente.php,
	godmode/agentes/agent_conf_gis.php, include/styles/menu.css,
	include/styles/pandora.css: Clean code, updated year.

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.php: fixed fall map in
	the bottom of visual console editor.

2010-05-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/setup/performance.php: hidden option perfomance
	'Compact CSS and JS into header' because in more Pandora installations have