@@ -1,3 +1,8 @@
+2010-05-27  Sergio Martin <sergio.martin@artica.es>
+
+	* operation/users/user_edit.php: Fixed the message
+	over the header for bug: 3007803 
+
 2010-05-27 Raúl Mateos <raulofpandora@gmail.com>
 
 	* operation/agentes/tactical.php: Give some colour to the data shown.
